# phone

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO  conftest.py  makefile  mkdocs.yml  os-release  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
cfg/: general_config.json  general_config_intertech.json  general_config_novofon.json  mcast_data.json  os-release  voip_runtime_data.json
docs/: api.md  installation.md  usage.md
emulator/: gpio_server.py
phone_app/: __init__.py  cli.py  const.py  gpio_client.py  log.py  phone_account.py  phone_app.py  phone_call.py  playsound.py  speaker.py  statistics.py  tools.py  voip_statistics.py
tests/: __init__.py  test_phone_app.py  test_tools.py
